# speak

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
include/speak/: speak.hpp
src/: speak.cpp  speak_listener.cpp  speak_service.cpp
